--- a/website.css
+++ b/website.css
@@ -5,6 +5,17 @@
     display: inline-block;
     align-content: flex-start;
 }
+#choice-header{
+    text-align: center;
+    align-items: center;
+}
+#choice-yes{
+    cursor: pointer;
+}
+#choice-no:hover{
+    margin-left: 100px;
+}
+
 .thumb {
     width: 80px;
     height: 80px;
@@ -33,6 +44,7 @@
     width: 100%;
     border: 10px;
     border-color: gray;
+    cursor: pointer;
 }
 .head{
     text-align: center;
